--- a/style.css
+++ b/style.css
@@ -1,99 +1,57 @@
 body {
-	background-color:#777;
-	color:#ebebeb;
-	width:960px;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
+  width: 960px;
+  margin: auto;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: #777;
 }
 
-header {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-	width:960px;
-	margin:20px;
-}
-
-nav {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-	width:960px;
-	margin:20px;
-}
-
+header,
+nav,
+section,
+aside,
 footer {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-	width:960px;
-	margin:20px;
+  display: block;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  background: #ebebeb;
 }
 
 section {
-	margin-left:20px;
-	background-color:#ebebeb;
-	color:#777;
-	width:495px;
-	text-align:center;
-	padding:20px;
+  display: block;
+  float: left;
+  width: 495px;
+  height: 267px;
+  overflow: hidden;
 }
 
 aside {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-	width:40%;
-	float:right;
-	bottom:20px;
+  display: block;
+  float: right;
+  width: 40%;
+  height: 267px;
+  overflow: hidden;
 }
 
 article {
-	width:90%;
-	background-color:#777;
-	color:#ebebeb;
-	text-align:center;
-	margin:20px;
-	padding-bottom:20px;
+  padding: 10px;
+  color: #ebebeb;
+  background: #777;
 }
 
 .clear {
-
+  clear: both;
 }
 
-
-h1 {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-	margin:20px;
-}
-
-h2 {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-}
-
-h3 {
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-}
-
-
+h1,
 p {
-	margin:20px;
-	background-color:#ebebeb;
-	color:#777;
-	text-align:center;
-}
-
-.class {
-
-}
-
-
-#id {
-
+  width: 90%;
+  padding: 10px;
+  margin: 10px;
+  color: #777;
+  text-align: center;
+  background: #ebebeb;
 }
